tests/rosetta/out/Smalltalk/boolean-values.out
/workspace/mochi/tests/rosetta/out/Smalltalk/boolean-values.st:9: parse error, expected '|' or identifier
